# indication-extraction-agent

./: .env.example  .gitignore  README.md  approach_3_results.csv  batch_results_litellm_gemini_20251124_083438.csv  drug_batch_results_default_model_with_verification_20251126_205318.csv  pyproject.toml  requirements.txt  test_gemini_prompt.py  test_hybrid_pipeline.py  test_setup.py
analysis_results/: Indication_Generation_Analysis_20251105_060722.xlsx
data/: abstract_titles.csv  approach_1.csv  approach_2.csv  approach_3.csv  approach_3_filtered_no_exact_matches.csv  approach_combined.csv  drug_class_extraction_rules.csv  drug_extraction_input.csv  drug_extraction_input_50.csv  drug_extraction_input_500.csv  drug_verification_cache.json  extraction_rules.csv  filtered_abstracts.csv  golden_data_drug.csv  indication_extraction_rules.csv
documentation/: ENTITY_MAPPING_OVERVIEW.md  IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETE.md  QUICKSTART.md  README_CALCULATOR.md  SETUP.md
eval/: evaluate_drug_extraction.py
examples/: __init__.py  custom_usage.py
src/: __init__.py  agent.py  batch_processor.py  config.py  create_filtered_csv.py  drug_agent.py  drug_batch_processor.py  drug_class_agent.py  drug_class_batch_processor.py  drug_class_consolidation_agent.py  drug_class_consolidation_processor.py  drug_class_extraction_title_agent.py  drug_class_extraction_title_processor.py  drug_class_grounded_search_agent.py  drug_class_grounded_search_processor.py  drug_class_llm_extractor.py  drug_class_react_agent.py  drug_class_react_batch_processor.py  drug_class_search_fetcher.py  drug_class_selection_agent.py  drug_class_selection_processor.py  drug_class_validation_agent.py  drug_class_validation_agent_langchain.py  drug_class_validation_processor.py  drug_extraction_processor.py  drug_validation_processor.py  drug_verification_processor.py  example.py  indication_batch_processor.py  indication_validation_processor.py  indication_validator_agent.py  langfuse_config.py  litellm_agent.py  litellm_batch_processor.py  litellm_validation_agent.py  litellm_validation_processor.py  llm_handler.py  main.py  regimen_batch_processor.py  (+4 more)
(+224 files in other folders)
