[tool.poetry]
name = "indication-extraction-agent"
version = "0.1.0"
description = "A Python project for indication extraction with LangGraph and Langfuse"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.23"
langchain-core = "^0.3.51"
langchain-openai = "^0.3.13"
langchain-anthropic = "^0.3.14"
langgraph = "^0.3.34"
langfuse = "^3.2.7"
pydantic = "^2.11.3"
pydantic-settings = "^2.9.1"
httpx = {extras = ["http2"], version = "^0.28.1"}
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
